--- a/index.html
+++ b/index.html
@@ -61,128 +61,128 @@
                 </div>
             </div>
         </div>
-        <!--Cards-->
-        <div class="container-sm">
-            <div class="row text-center">
-                <h6>CONOCE A LOS</h6>
-                <h2>ORADORES</h2>
-                <div class="col-sm card">
-                    <img class="card-img-top" width="300px" src="img\steve.jpg" alt="Foto de Steves Jobs"><br>
-                    <span class="badge bg-warning text-body">JavaScript</span><span
-                        class="badge bg-primary">React</span>
-                    <div class="card-body">
-                        <h5 class="card-title">Steves Jobs</h5>
-                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae maiores
-                            cupiditate
-                            voluptate,
-                            obcaecati inventore eos comm class="badge bg-primary"odi quia nulla repellendus fugiat
-                            dolores
-                            quod
-                            at
-                            laudantium nemo omnis
-                            expedita alias velit eveniet.</p>
-                    </div>
+    </div>
+    <!--Cards-->
+    <div class="container-sm">
+        <div class="row text-center">
+            <h6>CONOCE A LOS</h6>
+            <h2>ORADORES</h2>
+            <div class="col-sm card">
+                <img class="card-img-top" width="300px" src="img\steve.jpg" alt="Foto de Steves Jobs"><br>
+                <span class="badge bg-warning text-body">JavaScript</span><span class="badge bg-primary">React</span>
+                <div class="card-body">
+                    <h5 class="card-title">Steves Jobs</h5>
+                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae maiores
+                        cupiditate
+                        voluptate,
+                        obcaecati inventore eos comm class="badge bg-primary"odi quia nulla repellendus fugiat
+                        dolores
+                        quod
+                        at
+                        laudantium nemo omnis
+                        expedita alias velit eveniet.</p>
                 </div>
-                <div class="col-sm card">
-                    <img class="card-img-top" width="300px" src="img\bill.jpg" alt="Foto de Bill Gates"><br>
-                    <span class="badge bg-warning text-body">JavaScript</span> <span
-                        class="badge bg-primary">React</span>
-                    <div class="card-body">
-                        <h5 class="card-title">Bill Gates</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam corrupti,
-                            odit
-                            harum
-                            commodi ab nostrum
-                            incidunt voluptatum minima, est officiis totam fuga eaque, eius earum esse. Deserunt animi
-                            blanditiis
-                            inventore?</p>
-                    </div>
+            </div>
+            <div class="col-sm card">
+                <img class="card-img-top" width="300px" src="img\bill.jpg" alt="Foto de Bill Gates"><br>
+                <span class="badge bg-warning text-body">JavaScript</span> <span class="badge bg-primary">React</span>
+                <div class="card-body">
+                    <h5 class="card-title">Bill Gates</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam corrupti,
+                        odit
+                        harum
+                        commodi ab nostrum
+                        incidunt voluptatum minima, est officiis totam fuga eaque, eius earum esse. Deserunt animi
+                        blanditiis
+                        inventore?</p>
                 </div>
-                <div class="col-sm card">
-                    <img class="card-img-top" width="300px" src="img\ada.jpeg" alt="Foto de Ada Lovelace"><br>
-                    <span class="badge bg-secondary">Negocios</span> <span class="badge bg-danger">Startups</span>
-                    <div class="card-body">
-                        <h5 class="card-title">Ada Lovelace</h5>
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero tempore ea
-                            rem,
-                            quo
-                            laborum fugit fugiat
-                            blanditiis non nesciunt animi eius? Dolor numquam inventore sequi, deserunt aspernatur ipsa
-                            ducimus
-                            possimus?</p>
-                    </div>
+            </div>
+            <div class="col-sm card">
+                <img class="card-img-top" width="300px" src="img\ada.jpeg" alt="Foto de Ada Lovelace"><br>
+                <span class="badge bg-secondary">Negocios</span> <span class="badge bg-danger">Startups</span>
+                <div class="card-body">
+                    <h5 class="card-title">Ada Lovelace</h5>
+                    <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero tempore ea
+                        rem,
+                        quo
+                        laborum fugit fugiat
+                        blanditiis non nesciunt animi eius? Dolor numquam inventore sequi, deserunt aspernatur ipsa
+                        ducimus
+                        possimus?</p>
                 </div>
             </div>
         </div>
-        <!--Imágen con texto al costado-->
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 m-0">
-                    <img width="100%" class="img-fluid" src="img\honolulu.jpg" alt="Foto de playa de Honolulu">
-                </div>
-                <div class="col-md-6 bg-dark text-light">
-                    <h2>Bs As - Octubre</h2>
-                    <p>Buenos Aires es la provincia y localidad más grande del estado de Argentina en
-                        Estados
-                        Unidos. Honolulu
-                        es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre Honolulu se
-                        refiere
-                        al área urbana en la costa suroeste de la isla Oahu, la ciudad y el condado de Honolulu han
-                        formadouna
-                        ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600 km2 de superficie).</p>
-                    <a href="#" class="text-light text-decoration-none">Conocé más</a>
-                </div>
+    </div>
+    <!--Imágen con texto al costado-->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 m-0">
+                <img width="100%" class="img-fluid" src="img\honolulu.jpg" alt="Foto de playa de Honolulu">
+            </div>
+            <div class="col-md-6 bg-dark text-light">
+                <h2>Bs As - Octubre</h2>
+                <p>Buenos Aires es la provincia y localidad más grande del estado de Argentina en
+                    Estados
+                    Unidos. Honolulu
+                    es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre Honolulu se
+                    refiere
+                    al área urbana en la costa suroeste de la isla Oahu, la ciudad y el condado de Honolulu han
+                    formadouna
+                    ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600 km2 de superficie).</p>
+                <a href="#" class="text-light text-decoration-none">Conocé más</a>
             </div>
         </div>
-        <!--Formulario-->
-        <div class="container">
-            <div class="row mx-auto text-center">
-                <h6 class="col-12" id="form">CONVIÉRTETE EN UN</h6>
-                <h2>ORADOR</h2>
-                <p>Anótate como orador para dar una <span class="charlaignite">charla ignite</span>. Cuéntanos de que quieres hablar!</p>
-            </div>
+    </div>
+    <!--Formulario-->
+    <div class="container">
+        <div class="row mx-auto text-center">
+            <h6 class="col-12" id="form">CONVIÉRTETE EN UN</h6>
+            <h2>ORADOR</h2>
+            <p>Anótate como orador para dar una <span class="charlaignite">charla ignite</span>. Cuéntanos de que
+                quieres hablar!</p>
         </div>
-            <div class="container">
-                <form action="mailtobsas@gmail.com.ar">
-                    <div class="row justify-content-center">
+    </div>
+    <div class="container">
+        <form action="mailtobsas@gmail.com.ar">
+            <div class="row justify-content-center">
+                <div class="col-sm-4">
+                    <input class="form-control" type="text" name="Nombre" placeholder="Nombre">
+                </div>
+                <div class="col-sm-4">
+                    <input class="form-control" type="text" name="Apellido" placeholder="Apellido"></div>
+            </div>
+            <div class="row mt-1  justify-content-center">
+                <div class="col-8">
+                    <textarea class="form-control" name="tema" id="tema" cols="30" rows="10" width="300px"
+                        placeholder="Sobre qué quieres hablar?"></textarea>
+                    <p class="small text-">Recuerda incluir un título para tu charla.</p>
+                    <div class="row justify-content-center d-grid">
                         <div class="col-sm-4">
-                            <input class="form-control" type="text" name="Nombre" placeholder="Nombre">
-                        </div>
-                        <div class="col-sm-4">
-                            <input class="form-control" type="text" name="Apellido" placeholder="Apellido"></div>
-                    </div>
-                    <div class="row mt-1  justify-content-center">
-                        <div class="col-8">
-                            <textarea class="form-control" name="tema" id="tema" cols="30" rows="10" width="300px"
-                                placeholder="Sobre qué quieres hablar?"></textarea>
-                            <p class="small text-">Recuerda incluir un título para tu charla.</p>
-                            <div class="row justify-content-center d-grid">
-                                <div class="col-sm-4">
-                                    <input type="submit" value="Enviar" class="btn btn-success btn-block"></div>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        <!--Navbar de abajo-->
-        <div class="container-fluid">
-            <nav class="navbar navbar-expand-sm bg-primary">
-                <div class="container-fluid">
-                    <div class="text-center mx-auto">
-                        <ul class="navbar-nav">
-                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Preguntas frecuentes</a>
-                            </li>
-                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Contáctanos</a></li>
-                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Prensa</a></li>
-                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Conferencias</a></li>
-                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Términos y condiciones</a>
-                            </li>
-                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Privacidad</a></li>
-                            <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Estudiantes</a></li>
-                        </ul>
+                            <input type="submit" value="Enviar" class="btn btn-success btn-block"></div>
                     </div>
                 </div>
-        </div>
+            </div>
+        </form>
+    </div>
+    <!--Navbar de abajo-->
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-sm bg-primary">
+            <div class="container-fluid">
+                <div class="text-center mx-auto">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Preguntas frecuentes</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Contáctanos</a></li>
+                        <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Prensa</a></li>
+                        <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Conferencias</a></li>
+                        <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Términos y condiciones</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Privacidad</a></li>
+                        <li class="nav-item"><a class="nav-link col p-3 pt-2 text-light"> Estudiantes</a></li>
+                    </ul>
+                </div>
+            </div>
+    </div>
 </body>
 
 </html>
